# libsignal

./: Cargo.toml  README.md
rust/protocol/: Cargo.toml
rust/protocol/fuzz/: Cargo.toml
rust/protocol/tests/: session.rs
rust/zkgroup/: Cargo.toml
rust/zkgroup/src/api/backups/: auth_credential.rs
rust/zkgroup/src/api/call_links/: create_credential.rs
rust/zkgroup/src/common/: sho.rs  simple_types.rs
rust/zkgroup/src/crypto/: credentials.rs  profile_key_commitment.rs  profile_key_credential_request.rs  profile_key_encryption.rs  profile_key_struct.rs  proofs.rs  receipt_credential_request.rs  receipt_struct.rs  signature.rs  timestamp_struct.rs  uid_encryption.rs  uid_struct.rs  zkcredential_examples.rs
rust/zkgroup/tests/: integration_tests.rs
